# stistools-sdetfp

./: .coverage  .gitignore  README.md  codecov.yml  pyproject.toml  test_assignments.csv  test_nsp.fits  test_sx2.fits
.github/workflows/: ci.yml
stistools/: wavecal.py
tests_sdet/: test_add_stis_s_region.py  test_basic2d.py  test_calstis.py  test_crrej_from_raw.py  test_ctestis.py  test_defringe_defringe.py  test_defringe_findloc.py  test_defringe_fit1d.py  test_defringe_mkfringeflat.py  test_defringe_normspflat.py  test_defringe_prepspec.py  test_defringe_response.py  test_doppinfo.py  test_evaldisp.py  test_gettable.py  test_inttag.py  test_mktrace.py  test_observation.py  test_ocrreject.py  test_ocrreject_exam.py  test_orbit.py  test_poisson_err.py  test_r_util.py  test_radialvel.py  test_sshift.py  test_stisnoise.py  test_tastis.py  test_wavecal.py  test_wavelen.py  test_wx2d.py  test_x1d.py  test_x2d.py
